--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,8 @@ jobs:
             -   run:
                     name: Authenticate with registry
                     command: |
-                        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN"
-                        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+                        echo "//registry.npmjs.org/:_authToken=$TEST_TOKEN"
+                        echo "//registry.npmjs.org/:_authToken=$TEST_TOKEN" > ~/.npmrc
                         cat ~/.npmrc
             -   run:
                     name: Publish @pxblue/angular-themes
