Move auth to publish script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,12 @@ jobs:
             - checkout
             # -   attach_workspace:
             #         at: .
-            -   run:
-                    name: Authenticate with registry
-                    command: |
-                        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN"
-                        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
-                        cat ~/.npmrc
+            # -   run:
+            #         name: Authenticate with registry
+            #         command: |
+            #             echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN"
+            #             echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+            #             cat ~/.npmrc
             -   run:
                     name: Publish @pxblue/angular-themes
                     command:  |
