--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,7 @@ jobs:
                     at: .
             -   run:
                     name: Authenticate with registry
-                    command: |
-                        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN"
-                        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
-                        cat ~/.npmrc
+                    command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
             -   run:
                     name: Publish @pxblue/angular-themes
                     command:  |
