--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,12 +31,14 @@ jobs:
                     at: .
             -   run:
                     name: Authenticate with registry
-                    command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+                    command: |
+                        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+                        echo "//registry.yarnpkg.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc            
             -   run:
                     name: Publish @pxblue/angular-themes
                     command:  |
                         cd angular
-                        npm run publish:package
+                        yarn publish:package
             -   run:
                     name: Publish @pxblue/react-themes
                     command:  |
