--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,17 +43,17 @@ jobs:
                     name: Publish @pxblue/react-themes
                     command:  |
                         cd react
-                        npm run publish:package
+                        yarn publish:package
             -   run:
                     name: Publish @pxblue/react-native-themes
                     command:  |
                         cd react-native
-                        npm run publish:package
+                        yarn publish:package
             -   run:
                     name: Publish @pxblue/storybook-themes
                     command:  |
                         cd storybook
-                        npm run publish:package
+                        yarn publish:package
 workflows:
     version: 2
     themes:
