--- a/storybook/package.json
+++ b/storybook/package.json
@@ -8,7 +8,7 @@
     "types": "index.d.ts",
     "scripts": {
         "test": "bash ./scripts/buildTest.sh",
-        "publish:package": "bash ./scripts/publish.sh"
+        "publish:package": "set npm_config_yes=true && npx -p @pxblue/publish pxb-publish"
     },
     "repository": {
         "type": "git",
