--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
     build:
         docker:
-            -   image: circleci/node:12.9.1-browsers
+            -   image: cimg/node:14.19.0-browsers
         steps:
             - checkout
             - run:
@@ -24,7 +24,7 @@ jobs:
 
     publish:
         docker:
-            -   image: circleci/node:12.9.1-browsers
+            -   image: cimg/node:14.19.0-browsers
         steps:
             - checkout
             -   attach_workspace:
